--- a/diaryProject/diaryProject/posts/templates/write.html
+++ b/diaryProject/diaryProject/posts/templates/write.html
@@ -12,6 +12,7 @@
 <body>
   <!-- write body 코드 지우고 다시 작성-->
   <form action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
     <div id="contain">
       <div id="white">
         <div class="date" id="created-at">
@@ -20,20 +21,19 @@
         </div>
         <div id="line"></div>
 
-        <!--form-->
-
-        {% csrf_token %}
-        <div id="photo">
-          {% if form.photo.value %}
-          <img src="{{ form.photo.value.url }}" style="width: 100%;" />
-          {% else %}
-          사진
-          {% endif %}
-        </div>
-        <div>
-          <textarea id="content" name="{{ form.body.html_name }}" placeholder="오늘 무슨 일이 있었냐면..."
-            autofocus>{{ form.body.value }}</textarea>
-        </div>
+        <form action="" method="POST">
+          <div id="photo">
+            {% if form.photo.value %}
+            <img src="{{ form.photo.value.url }}" style="width: 100%;" />
+            {% else %}
+            사진
+            {% endif %}
+          </div>
+          <div>
+            <textarea id="content" name="{{ form.body.html_name }}" placeholder="오늘 무슨 일이 있었냐면..."
+              autofocus>{{ form.body.value }}</textarea>
+          </div>
+        </form>
       </div>
 
       <!-- 저장 버튼으로 하지말고 form이니깐 submit로 해서 넘겨주기-->
