--- a/diaryProject/diaryProject/posts/templates/list_main.html
+++ b/diaryProject/diaryProject/posts/templates/list_main.html
@@ -25,11 +25,13 @@
       </a>
       <div id="list-icon">리스트</div>
     </div>
-    <article id="content-list" style="text-align: center;">
+    <article id="content-list" style="align-items: center;">
       <div>
         {% for post in posts %}
         <!-- 댓글 개수 추가해야됨-->
-        <h4><a href="{% url 'posts:post_detail' post.id %}"> {{post.created_at}} </a></h4>
+        <a href="{% url 'posts:post_detail' post.id %}"> {{post.created_at}} </a>
+        <p id="comentNum">{{ post.comment_count }}</p>
+        <hr id="line">
         {% endfor %}
       </div>
     </article>
@@ -41,8 +43,9 @@
         </span>
         <span id="write-form">
           <img id="circle" src="/static/images/circle.png" style="width: 60px; height: 60px" />
-
-          <img id="book" src="/static/images/book.png" style="width: 40px; height: 40px" />
+          <a href="{% url 'posts:create' %}">
+            <img id="book" src="/static/images/book.png" style="width: 40px; height: 40px" />
+          </a>
         </span>
         <span>
           <img id="tong" src="/static/images/static.png" style="width: 37px; height: 37px" />
@@ -52,7 +55,7 @@
         <span id="home">
           <img src="/static/images/home.png" style="width: 30px; height: 30px" />
         </span>
-        <a href="{% url 'accounts:login' %}">
+        <a href="{% url 'accounts:logout' %}">
           <div id="log-out">로그아웃</div>
         </a>
       </div>
