--- a/diaryProject/diaryProject/posts/templates/main.html
+++ b/diaryProject/diaryProject/posts/templates/main.html
@@ -25,7 +25,17 @@
       </a>
       <div id="tile">타일</div>
     </div>
-    <article id="content-list"></article>
+    <article id="content-list">
+      <div class="white-box">
+        {% for post in posts %}
+        <a href="{% url 'posts:post_detail' post.id %}">
+          <h4><a href="{% url 'posts:post_detail' post.id %}"> {{post.created_at}} </a></h4>
+          <div id="line"></div>
+          {{ post.body}}
+        </a>
+        {% endfor %}
+      </div>
+    </article>
 
     <div id="green">
       <div id="green-section1">
@@ -48,7 +58,7 @@
         <span id="home">
           <img src="/static/images/home.png" style="width: 30px; height: 30px" />
         </span>
-        <a href="{% url 'accounts:login' %}">
+        <a href="{% url 'accounts:logout' %}">
           <div id="log-out">로그아웃</div>
         </a>
       </div>
